OI-281: Implement Discussion "message" view mode layout template. Implement 'Create a message after adding discussion' rule, and make additional conditions to hide Discussion from default Create node rules, and to not create discussion if it's status "invisible". Fix MessageAction.php assignment selector. Implement styles for discussion message. Started creating access to now show the discussion after it was created, but status was changed to invisible.

--- a/themes/openideal_theme/css/style-rtl.css
+++ b/themes/openideal_theme/css/style-rtl.css
@@ -15033,6 +15033,10 @@ nav.tabs {
     background: #F2994A; }
     .message--referenced-label--comment:after {
       border-bottom: 21px solid #F2994A; }
+  .message--referenced-label--discussion {
+    background: #905a2b; }
+    .message--referenced-label--discussion:after {
+      border-bottom: 21px solid #905a2b; }
   .message--referenced-label--user {
     background: #E1B83B; }
     .message--referenced-label--user:after {
