--- a/themes/openideal_theme/scss/components/_message.scss
+++ b/themes/openideal_theme/scss/components/_message.scss
@@ -121,6 +121,14 @@
     }
   }
 
+  &--referenced-label--discussion {
+    background: #905a2b;
+
+    &:after {
+      border-bottom: 21px solid #905a2b;
+    }
+  }
+
   &--referenced-label--user {
     background: #E1B83B;
 
